--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <span class="tooltip">Home</span>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="../MP/Pages/Categories/categories.html">
                     <i class="ti ti-apps"></i>
                     <span class="links_name">Categories</span>
                     </a>
@@ -65,23 +65,10 @@
             <ul id="list-holder">
             </ul>
         </section>
+
         <script src="Assets/JS/sidebar.js"></script>
+
         <script>
-            /*
-                // Meme ID Formula Key //
-                ------------------------------------------------------------------------
-                 # | Example | Meaning                                                |
-                ---|---------|--------------------------------------------------------|-
-                 1 | 6       | Weekday in number form                                 |
-                 2 | 12      | Day of upload                                          |
-                 2 | 07      | Month of upload                                        |
-                 2 | 23      | Year of upload                                         |
-                 2 | 12      | Hour of upload                                         |
-                 2 | 09      | Minute of upload                                       |
-                ---|---------|--------------------------------------------------------|-
-                All meme IDs are 11 didgets long.
-            */
-            
             let jsonData = `[
                 {
                     "Title": "Wow",
