--- a/Pages/Account/signup.html
+++ b/Pages/Account/signup.html
@@ -81,15 +81,15 @@
                         </div>
                         <div class="input-box">
                             <span class="details">Profile Picture</span>
-                            <input type="image" placeholder="Enter your number" required>
+                            <input type="text" placeholder="Enter a link to your profile picture" required>
                         </div>
                         <div class="input-box">
                             <span class="details">Password</span>
-                            <input type="text" placeholder="Enter your password" required>
+                            <input type="text" name = password1 minlength="5" placeholder="Enter your password" required>
                         </div>
                         <div class="input-box">
                             <span class="details">Confirm Password</span>
-                            <input type="text" placeholder="Confirm your password" required>
+                            <input type="text" name = password2 placeholder="Confirm your password" required>
                         </div>
                     </div>
                     <div class="gender-details">
