--- a/Pages/Account/signup.html
+++ b/Pages/Account/signup.html
@@ -112,6 +112,7 @@
                             </label>
                         </div>
                     </div>
+                    <center><p>If you are not active for 4 months your account will be deleted.</p></center>
                     <div class="button">
                         <input type="submit" value="Register">
                     </div>
